# ProjectAxisEngine

./: .bocan.yaml  .tmuxp.yaml  AGENTS.md  CMakeLists.txt  README.md
scripts/: run-debug.sh  run-release.sh
source/AxisEngine-App-Laser/: CMakeLists.txt
source/AxisEngine-App-Laser/source/: Laser.cpp
source/AxisEngine-App-Picker/: CMakeLists.txt
source/AxisEngine-App-Picker/source/: Picker.cpp
source/AxisEngine-App-Plotter/: CMakeLists.txt
source/AxisEngine-App-Plotter/source/: Plotter.cpp  main.cpp
source/AxisEngine-App-Plotter/source/Modules/: Actuator.cpp  Actuator.hpp
source/AxisEngine-App-Printer/: CMakeLists.txt
source/AxisEngine-App-Printer/source/: Printer.cpp
source/AxisEngine-App-Router/: CMakeLists.txt
source/AxisEngine-App-Router/source/: Router.cpp
source/AxisEngine-Core/: CMakeLists.txt
source/AxisEngine-Core/source/: AxisEngine.hpp  Kernel.cpp  Kernel.hpp  Module.cpp  Module.hpp
source/AxisEngine-Core/source/Modules/: Conveyer.cpp  Conveyer.hpp  GcodeDispatch.cpp  GcodeDispatch.hpp  Robot.cpp  Robot.hpp  SerialConsole.cpp  SerialConsole.hpp  SlowTicker.cpp  SlowTicker.hpp
source/AxisEngine-Core/source/Modules/Utils/Streams/: ConsoleStream.cpp  ConsoleStream.hpp  FileStream.cpp  FileStream.hpp  NetworkStream.cpp  NetworkStream.hpp  Stream.hpp
source/AxisEngine-Core/source/Modules/Utils/Structs/: SerialMessage.hpp
source/AxisEngine-Core/test/: core.test.cpp
source/ModuleSystem-App/source/: main.cpp
source/ModuleSystem-Core/source/: Module.cpp  Module.hpp  Module.test.cpp
